<resources>
    <string name="app_name">UV-VIS Spectrophotometer</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="main">Main Menu</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_file_export">File Export</string>
    <string name="action_print">Print</string>
    <string name="action_set_wavelength">Wavelength</string>
    <string name="action_baseline">Baseline</string>
    <string name="action_peak_distance">Peak Height</string>
    <string name="action_help">Help</string>
    <string name="action_dark_current">Dark Current</string>
    <string name="wavelength">WL</string>
    <string name="abs">Abs</string>
    <string name="time">Time</string>
    <string formatted="false" name="trans">%T(%R)</string>
    <string name="action_settings">Setting</string>
    <string name="photometric_measurement">Photometric</string>
    <string name="quantitative_analysis">Quantitative</string>
    <string name="wavelength_scan">WL Scan</string>
    <string name="time_scan">Time Scan</string>
    <string name="multi_wavelength">Multi WL</string>
    <string name="hesuan">DNA/Protein</string>
    <string name="about">About us</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="start_test">Start</string>
    <string name="stop_test">Stop</string>
    <string name="rezero">Blank</string>
    <string name="set_wavelength">Set WL</string>
    <string name="retry_to_exit">Press RETURN again to exit</string>
    <string name="index">No.</string>
    <string name="wavelength_with_unit">WL.(nm)</string>
    <string name="abs_with_unit">Abs</string>
    <string formatted="false" name="trans_with_unit">%T(%R)</string>
    <string name="energy">Energy</string>
    <string name="action_delete">Delete</string>
    <string name="action_selectall">Select all</string>
    <string name="ble_not_support">BLE not support</string>
    <string name="select_devices">Select Devices</string>
    <string name="attempt_connecting_device">Connecting...</string>
    <string name="interval">Interval</string>
    <string name="mode">Mode</string>
    <string name="ratio">Ratio</string>
    <string name="time_with_unit">Time(s)</string>
    <string name="process">Process</string>
    <string name="smooth">Smooth</string>
    <string name="name">Name</string>
    <string name="conc">Conc.</string>
    <string name="sample_fitting">Standard fitting</string>
    <string name="ratio_fitting">Coefficient</string>
    <string name="method_fitting_one">Linear fit</string>
    <string name="method_fitting_one_zero">Linear fit through zero</string>
    <string name="unit_ug_ml">ug/ml</string>
    <string name="notice_string">Notice</string>
    <string name="sure_to_delete">Please confirm.</string>
    <string name="set_wavelength_message">Set WL...</string>
    <string name="data_processing_message">Processing...</string>
    <string name="connect_done">Connect OK!</string>
    <string name="notice_rezero">Blank first!</string>
    <string name="do_fitting">Fitting</string>
    <string name="title_timescan_setting_work_wavelength">Set WL</string>
    <string name="title_timescan_work_wavelength">WL</string>
    <string name="summary_timescan_work_wavelength">Input WL</string>
    <string name="title_timescan_setting_x">Set time(X axis)</string>
    <string name="title_timescan_start">Start time</string>
    <string name="summary_timescan_start">Start time</string>
    <string name="title_timescan_end">End time</string>
    <string name="summary_timescan_end">End time</string>
    <string name="setting_timescan_title">Time scan</string>
    <string name="title_timescan_interval">Time interval</string>
    <string name="summary_timescan_interval">Time interval</string>
    <string name="title_timescan_delay">Delay time</string>
    <string name="summary_timescan_delay">Delay time</string>
    <string name="reset">Reset</string>
    <string name="nm">nm</string>
    <string name="s">s</string>
    <string name="connect_timeout">Connect timeout</string>
    <string name="timeout_set_wavelength">Set WL timeout</string>
    <string name="timeout_process">Process data timeout</string>
    <string name="notice_not_init">Please connect first</string>
    <string name="title_test_mode">Test mode</string>
    <string name="summary_timescan_test_mode">Test mode</string>
    <string name="title_timescan_setting_y">Set time(Y axis)</string>
    <string name="title_limit_up">Upper limit</string>
    <string name="title_limit_down">Lower limit</string>
    <string name="summary_limit_up">Upper limit</string>
    <string name="summary_limit_down">Lower limit</string>
    <string name="abs_unit">Abs</string>
    <string formatted="false" name="trans_unit">%T(%R)</string>
    <string name="setting_wavelengthscan_title">WL scan set</string>
    <string name="title_wavelength_test_mode_y">Test mode(Y axis)</string>
    <string name="summary_wavelength_test_mode">Test mode</string>
    <string name="title_wavelength_y">Set Y axis</string>
    <string name="title_wavelength_x">Set X axis</string>
    <string name="title_wavelength_start">Start WL</string>
    <string name="title_wavelength_end">End WL</string>
    <string name="title_scan_speed">Scan speed</string>
    <string name="speed_standard">Standard</string>
    <string name="title_wavelength_interval">WL interval</string>
    <string name="summary_wavelength_interval">WL interval</string>
    <string name="notice_edit_null">Enter the value!</string>
    <string name="setting_qa_title">Setting</string>
    <string name="title_fitting_method">Fit method</string>
    <string name="summary_fitting_method">Fit method</string>
    <string name="title_conc_unit">Unit</string>
    <string name="summary_conc_unit">Unit</string>
    <string name="standard_sample_fitting">Standard fitting</string>
    <string name="formalu_ratio">Coefficient</string>
    <string name="formalu_detail1">C = K1 x A</string>
    <string name="formalu_detail2">C = K0 + K1 x A</string>
    <string name="wavelength_setting">Set WL</string>
    <string name="nm_ratio1"> nm&#160;&#160;&#160;&#160;factor1</string>
    <string name="wavelength1">WL1</string>
    <string name="nm_ratio2"> nm&#160;&#160;&#160;&#160;factor2</string>
    <string name="wavelength2">WL2</string>
    <string name="nm_ratio3"> nm&#160;&#160;&#160;&#160;factor3</string>
    <string name="wavelength3">WL3</string>
    <string name="system_setting">Utility</string>
    <string name="acurrency_setting">Set accuracy</string>
    <string name="baseline_message">Set baseline...</string>
    <string name="baseline_done">Set baseline done</string>
    <string name="rezero_message">Blanking...</string>
    <string name="add">add</string>
    <string name="sample_conc_setting">Set conc.</string>
    <string name="test">Test</string>
    <string name="multi_wavelength_setting">setting</string>
    <string name="add_item">+Add</string>
    <string name="sample">Standard</string>
    <string name="notice_delete">Delete</string>
    <string name="noting_selected">no option</string>
    <string name="notice_setting_null">set null!</string>
    <string name="notice_select_null">Selection incorrect</string>
    <string name="notice_save_null">Cannot save null</string>
    <string name="notice_fitting_null">Fitting null</string>
    <string name="name_setting">Test name</string>
    <string name="notice_wavelength_invalid">Input not in range:190-1100</string>
    <string name="test_message">Testing...</string>
    <string name="gain">Gain</string>
    <string name="not_save">Exit without saving</string>
    <string name="notice_name_invalid">Invalid name</string>
    <string name="notice_file_existed">File name already existed, save failed</string>
    <string name="regist_code"> </string>
    <string name="license">License</string>
    <string name="regist_code_title">License</string>
    <string name="sure_to_disconnect">Sure to disconnection?</string>
    <string name="notice">Notice</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="peak_setting">Peak height</string>
    <string name="peak_distance">Peak height</string>
    <string name="current">Current</string>
    <string name="line">Curve</string>
    <string name="select_lines">Select curve</string>
    <string name="lines_less_than_2">Curve less than 2</string>
    <string name="notice_select_2">Select 2</string>
    <string name="select_operation">Select operation</string>
    <string name="self_checking">Selftesting...</string>
    <string name="lamp">Switch lamp ------ </string>
    <string name="ad">Detector ------ </string>
    <string name="deuterium">D2 lamp ------ </string>
    <string name="tungsten">W lamp ------ </string>
    <string name="wave">WL reset ------ </string>
    <string name="para">System parameter ------ </string>
    <string name="dark">Dark current ------ </string>
    <string name="warm">warm up</string>
    <string name="skip">skip</string>
    <string name="ing">...</string>
    <string name="done">OK</string>
    <string name="skip_warm">Skip warm up</string>
    <string name="device_selfcheck">Selftesting</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="calc_ratio">Factor</string>
    <string name="calc_speed_title">Calculated the rate</string>
    <string name="calc_speed_result">Rate: </string>
    <string name="deuterium_switch">Turn on/off D2 lamp</string>
    <string name="deuteruim_clear_time">Reset D2 lamp usage time</string>
    <string name="tungsten_switch">Turn on/off W lamp</string>
    <string name="tungsten_clear_time">Reset W lamp usage time</string>
    <string name="set_switch_wavelength">Set WL of lamp change</string>
    <string name="reset_dark">Refresh dark current</string>
    <string name="adjust_wl">Adjusting wavelength</string>
    <string name="analysis_method">Method</string>
    <string name="method_one">Method 1</string>
    <string name="method_two">Method 2</string>
    <string name="method_custom">Custom method</string>
    <string name="wavelength_ref">Ref. WL</string>
    <string name="parameter_setting">Set WL</string>
    <string name="F1">F1=</string>
    <string name="F2">F2=</string>
    <string name="F3">F3=</string>
    <string name="F4">F4=</string>
    <string name="sample_name">Sample_name</string>
    <string name="dna_with_unit">DNA(ug/ml)</string>
    <string name="protein_with_unit">Protein(ug/ml)</string>
    <string name="radio">radio</string>
    <string name="sample_name_setting">Sample name</string>
    <string name="txt">txt</string>
    <string name="cvs">cvs</string>
    <string name="notice_invalid_license">Invalid license</string>
    <string name="notice_baseline_null">Set baseline first!</string>
    <string name="notice_null_baseline_available">no baseline</string>
    <string name="apply_baseline">Apply</string>
    <string name="create_baseline">Create</string>
    <string name="apply_done">Apply baseline done</string>
    <string name="title_conc_setting">Set conc.(Y axis)</string>
    <string name="title_conc_start">Lower limit</string>
    <string name="title_conc_end">Upper limit</string>
    <string name="conc_unit">ug/ml</string>
    <string name="clear_chart">clear</string>
    <string name="wait_time">Delay time:</string>
    <string name="key_timescan_setting_start">key_setting_timescan_start</string>
    <string name="key_timescan_setting_end">key_setting_timescan_end</string>
    <string name="key_timescan_setting_work_wavelength">key_setting_timescan_work_WL</string>
    <string name="sample_dark_current">Sample dark current</string>
    <string name="reference_dark_current">Reference dark current</string>
</resources>