<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_timescan_setting_work_wavelength">
        <EditTextPreference android:key="@string/key_timescan_setting_work_wavelength"
            android:defaultValue="600"
            android:title="@string/title_timescan_work_wavelength"
            android:dialogIcon="@mipmap/ic_launcher"
            android:summary="@string/summary_timescan_work_wavelength" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_timescan_setting_x">
        <EditTextPreference android:key="@string/key_timescan_setting_start"
            android:defaultValue="0"
            android:title="@string/title_timescan_start"
            android:dialogIcon="@mipmap/ic_launcher"
            android:summary="@string/summary_timescan_start" />
        <EditTextPreference android:key="@string/key_timescan_setting_end"
            android:defaultValue="180"
            android:title="@string/title_timescan_end"
            android:dialogIcon="@mipmap/ic_launcher"
            android:summary="@string/summary_timescan_end" />
    </PreferenceCategory>


</PreferenceScreen>