<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_selectall"
        android:icon="@mipmap/ic_menu_selectall"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/action_selectall"/>

    <item
        android:id="@+id/action_share"
        android:icon="@mipmap/ic_content_discard"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/action_delete"/>

    <item
        android:id="@+id/action_setting"
        android:icon="@mipmap/ic_settings"
        app:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/action_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="110"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_file_export"
        android:orderInCategory="120"
        android:title="@string/action_file_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_wavelength"
        android:orderInCategory="130"
        android:title="@string/action_set_wavelength"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rezero"
        android:orderInCategory="130"
        android:title="@string/rezero"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_test"
        android:orderInCategory="130"
        android:title="@string/start_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dark_current"
        android:orderInCategory="160"
        android:title="@string/action_dark_current"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_baseline"
        android:orderInCategory="140"
        android:title="@string/action_baseline"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_peak_distance"
        android:orderInCategory="150"
        android:title="@string/action_peak_distance"
        app:showAsAction="never" />
</menu>
