<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:id="@+id/layout_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wavelength_scan_test_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mode"
            android:textColor="@color/color_content_text" />

        <Button
            android:id="@+id/bt_wavelength_scan_current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/current"
            android:textColor="@color/color_button" />

        <Button
            android:id="@+id/bt_wavelength_scan_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/start_test"
            android:textColor="@color/color_button" />

        <Button
            android:id="@+id/bt_wavelength_scan_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/stop_test"
            android:textColor="@color/color_button" />

        <Button
            android:id="@+id/bt_wavelength_scan_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/clear_chart"
            android:textColor="@color/color_button" />

        <Button
            android:id="@+id/bt_wavelength_scan_rezero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/rezero"
            android:textColor="@color/color_button" />

        <Button
            android:id="@+id/bt_wavelength_scan_process"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/process"
            android:textColor="@color/color_button" />
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/layout_operation"
        android:background="@color/color_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_line"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/chart_margin_right"
            android:layout_marginTop="@dimen/chart_margin_top"
            android:layout_weight="4">

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/hello_wavelength_scan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </RelativeLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_divide_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/index"
                    android:textColor="@color/color_title_text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/wavelength"
                    android:textColor="@color/color_title_text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/abs"
                    android:textColor="@color/color_title_text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/trans"
                    android:textColor="@color/color_title_text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/energy"
                    android:textColor="@color/color_title_text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_divide_line" />

            <ListView
                android:id="@+id/lv_wavelength_scan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>