<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_multiple_wavelength_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_margin_left_right"
            android:layout_marginRight="@dimen/button_margin_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/start_test"
            android:textColor="@color/color_button" />

        <Button
            android:id="@+id/bt_multiple_wavelength_rezero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_top_bottom"
            android:layout_marginLeft="@dimen/button_margin_left_right"
            android:layout_marginRight="@dimen/button_margin_left_right"
            android:layout_marginTop="@dimen/button_margin_top_bottom"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/rezero"
            android:textColor="@color/color_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/title_top_bottom"
        android:layout_marginTop="@dimen/title_top_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/index"
            android:textColor="@color/color_title_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/wavelength_with_unit"
            android:textColor="@color/color_title_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/abs_with_unit"
            android:textColor="@color/color_title_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/trans_with_unit"
            android:textColor="@color/color_title_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/energy"
            android:textColor="@color/color_title_text" />
        <!-- Fake view -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/layout_title"
        android:background="@color/color_divide_line" />

    <ListView
        android:id="@+id/lv_multiple_wavelength"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_buttons"
        android:layout_below="@id/line"></ListView>

</RelativeLayout>