<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:text="@string/gain"
            android:layout_weight="1"
            android:textSize="@dimen/baseline_title_size"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_baseline_text" />
        <TextView
            android:layout_width="0dp"
            android:text="@string/sample_dark_current"
            android:layout_weight="2"
            android:textSize="@dimen/baseline_title_size"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_baseline_text" />
        <TextView
            android:layout_width="0dp"
            android:text="@string/reference_dark_current"
            android:layout_weight="2"
            android:textSize="@dimen/baseline_title_size"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_baseline_text" />
    </LinearLayout>
    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/lv_dialog_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>