<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_right"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorDialogText"
            android:textSize="@dimen/dialog_textsize"
            android:layout_marginRight="@dimen/dialog_margin"
            android:text="@string/name"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/dialog_et_qa_name"
            android:text="@string/sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_right"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorDialogText"
            android:textSize="@dimen/dialog_textsize"
            android:layout_marginRight="@dimen/dialog_margin"
            android:text="@string/conc"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/dialog_et_qa_conc"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>